--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/WClogo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>World Cup 2022</title>
+    <title>Rates 2.1</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
